refactor: finished swagger
